Improved a bunch of things with the wizard settings view.

--- a/app/styles/account/wizard-settings.sass
+++ b/app/styles/account/wizard-settings.sass
@@ -1,42 +1,27 @@
 #wizard-settings-view
-  h3#loading
+  h3
     text-align: center
-  
-  #color-settings
-    float: left
-      width: 600px
-      margin-left: 30px
-
-    canvas
-      float: left
-      border: 2px solid black
-      margin: 20px
-
-    .color-group
-      clear: both
-      padding-bottom: 10px
-      margin-bottom: 10px
-      border-bottom: 1px solid gray
-
-    .name-cell
-      float: left
-      width: 100px
-      padding-top: 2px
-
-      input
-        margin-right: 10px
-        position: relative
-        top: -3px
-
-    .checkbox-cell
-      float: left
-      width: 40px
-
-    .slider-cell
-      margin-bottom: 10px
-      float: left
-      width: 120px
-
-    .selector
-      width: 100px
     
+  #tinting-display
+    float: right
+    
+  width: 450px
+  margin: 0 auto
+  
+  #color-settings table
+    float: left
+    width: 250px
+    
+  .minicolors-input
+    display: none
+    
+  .minicolors-swatch
+    position: static
+    width: 40px
+    cursor: pointer
+    
+  .enabled-cell
+    width: 30px
+    
+  .color-cell
+    width: 50px
