Added an async name checker for the wizard settings modal.

--- a/app/templates/modal/wizard_settings.jade
+++ b/app/templates/modal/wizard_settings.jade
@@ -6,7 +6,7 @@ block modal-header-content
 block modal-body-content
   div.wizard-name-line.form-group
     label.control-label(for="name")
-      | Your Wizardly Name
+      | Your Wizardly Name:
     input#wizard-settings-name(name="name", type="text", value="#{me.get('name')||''}")
 
   #wizard-settings-view
