Fix link in legal.jade

--- a/app/templates/legal.jade
+++ b/app/templates/legal.jade
@@ -69,7 +69,7 @@ block content
       | Here on CodeCombat, you're going to become a powerful wizard–not 
       | just in the game, but also in real life.
     span  
-    a(href="", data-i18n="legal.url_hire_programmers")
+    a(href="https://code.org/stats", data-i18n="legal.url_hire_programmers")
       | No one can hire programmers fast enough
     span , 
     span(data-i18n="legal.recruitment_description_suffix")
