--- a/app/templates/contribute/diplomat.jade
+++ b/app/templates/contribute/diplomat.jade
@@ -86,7 +86,7 @@ block content
           li Slovak - Anon
           li Persian - Reza Habibi (Rehb)
           li Czech - vanous
-          li Russian - fess89, ser-storchak
+          li Russian - fess89, ser-storchak, Mr.A
           li Ukrainian - fess89
           li Italian - flauta
           li Norwegian - bardeh
