Hit a really bad victory modal image.

--- a/app/templates/play/level/modal/victory.jade
+++ b/app/templates/play/level/modal/victory.jade
@@ -6,6 +6,8 @@
       span(data-i18n="play_level.victory_title_prefix")
       span= levelName
       span(data-i18n="play_level.victory_title_suffix") Complete
+
+    img.victory-banner(src="/images/level/victory.png", alt="")
   
   .modal-body!= body
   
