--- a/app/templates/editor/article/edit.jade
+++ b/app/templates/editor/article/edit.jade
@@ -1,6 +1,15 @@
 extends /templates/base
 
 block content
+  div
+    ol.breadcrumb
+      li
+        a(href="/editor", data-i18n="editor.main_title") CodeCombat Editors
+      li
+        a(href="/editor/thang", data-i18n="editor.article_title") Article Editor
+      li.active
+        | #{article.attributes.name}
+
   button(data-toggle="coco-modal", data-target="modal/revert", data-i18n="revert.revert").btn.btn-primary#revert-button Revert
   button(data-i18n="article.edit_btn_preview").btn.btn-primary#preview-button Preview
   button(data-toggle="coco-modal", data-target="modal/save_version", data-i18n="common.save").btn.btn-primary#save-button Save
