--- a/app/templates/kinds/search.jade
+++ b/app/templates/kinds/search.jade
@@ -1,5 +1,12 @@
 extends /templates/base
 block content
+  div
+    ol.breadcrumb
+      li
+        a(href="/editor", data-i18n="editor.main_title") CodeCombat Editors
+      li.active(data-i18n="#{currentEditor}") 
+        | #{currentEditor}
+
   if me.get('anonymous')
     a.btn.btn-primary.open-modal-button(data-toggle="coco-modal", data-target="modal/signup", role="button") Sign Up to Create a New #{modelLabel}
   else
