--- a/app/styles/play/level/hud.sass
+++ b/app/styles/play/level/hud.sass
@@ -86,49 +86,51 @@
         @include gradient-radial-custom-stops(hsla(116,80%,74%,1), 20%, hsla(116,80%,31%,1), 70%)
 
     .thang-props
-      width: 144px
-      height: 100px
       margin: 8px 8px 0 0
-      overflow-y: auto
       float: left
-      @include user-select(text)
 
-      .prop
-        img
-          margin-right: 5px
-          width: 16px
-          height: 16px
-
-      .text-prop
-        width: 50%
-
-      .prop-value.bar-prop
-        width: 100px
-        display: inline-block
-        height: 6px
-        background: #ddd
-        border: 1px solid black
-        border-radius: 6px
-        overflow: hidden
-
-        .bar
-          background: black
-          width: 100%
+      .thang-props-column
+        float: left
+        width: 144px
+        height: 100px
+        @include user-select(text)
+  
+        .prop
+          img
+            margin-right: 5px
+            width: 16px
+            height: 16px
+  
+        .text-prop
+          width: 50%
+  
+        .prop-value.bar-prop
+          width: 100px
+          display: inline-block
+          height: 6px
+          background: #ddd
+          border: 1px solid black
+          border-radius: 6px
+          overflow: hidden
+  
+          .bar
+            background: black
+            width: 100%
+            height: 100%
+  
+        .prop[name="health"] .bar
+          background: #C5362B
+  
+        .message
+          text-align: center
+          display: table
           height: 100%
-
-      .prop[name="health"] .bar
-        background: #C5362B
-
-      .message
-        text-align: center
-        display: table
-        height: 100%
-        width: 100%
-
-        p
-          display: table-cell
-          vertical-align: middle
-          font-size: 20px
+          width: 100%
+  
+          p
+            display: table-cell
+            vertical-align: middle
+            font-size: 20px
 
     .thang-actions
       width: 212px
