Rearranging the ladder view.

--- a/app/styles/play/ladder.sass
+++ b/app/styles/play/ladder.sass
@@ -1,4 +1,10 @@
 #ladder-view
+  h1
+    text-align: center
+    
+  .tab-pane
+    margin-top: 10px
+  
   .score-cell
     width: 50px
     
@@ -9,10 +15,6 @@
   .intro-button
     width: 45%
     margin: 0 2.5%
-
-  #simulation-status-text
-    display: inline
-    margin-left: 10px
 
   .name-col-cell
     max-width: 300px
