--- a/app/templates/play/ladder.jade
+++ b/app/templates/play/ladder.jade
@@ -2,17 +2,11 @@ extends /templates/base
 block content
 
   div#level-column
-    h3= level.get('name')
-    div#level-description
-      !{description}
-  
-    if !me.get('anonymous')
-      //a(href="http://www.youtube.com/watch?v=IFvfZiJGDsw&list=HL1392928835&feature=mh_lolz").intro-button.btn.btn-primary.btn-lg Watch the Video
-      
-      a(href="/play/level/brawlwood-tutorial").intro-button.btn.btn-primary.btn-lg Play the Tutorial
+    h1= level.get('name')
+    
+    //if !me.get('anonymous')
+    //  a(href="/play/level/brawlwood-tutorial").intro-button.btn.btn-primary.btn-lg Play the Tutorial
 
-  hr
-  
   if me.get('anonymous')
     div#must-log-in
       p
@@ -23,41 +17,37 @@ block content
 
   else
     div#columns.row
+      div.column.col-md-2
       for team in teams
-        div.column.col-md-6
+        div.column.col-md-4
           a(href="/play/ladder/#{levelID}/team/#{team.id}", style="background-color: #{team.primaryColor}").play-button.btn.btn-danger.btn-block.btn-lg
             span Play As 
             span= team.name
-  
-          table.table.table-bordered.table-condensed.table-hover
-            //(style="background-color: #{team.bgColor}")
-            tr
-              th(colspan=3, style="color: #{team.primaryColor}")
-                span= team.name
-                span  Leaderboard
-            tr
-              th Score
-              th.name-col-cell Name
-              th
-  
-            for session in team.leaderboard.topPlayers.models
-              - var myRow = session.get('creator') == me.id
-              tr(class=myRow ? "success" : "")
-                td.score-cell= session.get('totalScore').toFixed(2)
-                td.name-col-cell= session.get('creatorName') || "Anonymous"
-                td
-                  if(!myRow)
-                    a(href="/play/level/#{level.get('slug') || level.id}/?team=#{team.otherTeam}&opponent=#{session.id}") Battle as #{team.otherTeam}!
-                  else
-                    a(href="/play/ladder/#{levelID}/team/#{team.id}") View your #{team.id} matches.
-  
-    unless me.attributes.anonymous
-      hr
-      button.btn.btn-warning.btn-lg.highlight#simulate-button(style="margin-bottom:10px;") Simulate Games!
-      p(id="simulation-status-text", style="display:inline; margin-left:10px;")
-        if simulationStatus
-          | #{simulationStatus}
-        else
-          | By simulating games you can get your game ranked faster!
-    if me.isAdmin()
-      button.btn.btn-danger.btn-lg.highlight#simulate-all-button(style="margin-bottom:10px; float: right;") RESET AND SIMULATE GAMES
+      div.column.col-md-2
+    
+    hr
+      
+    ul.nav.nav-pills
+      li.active
+        a(href="#ladder", data-toggle="tab") Ladder
+      li
+        a(href="#my-matches", data-toggle="tab") My Matches
+      li
+        a(href="#simulate", data-toggle="tab") Simulate
+
+    div.tab-content
+      .tab-pane.active.well#ladder
+        #ladder-tab-view
+      .tab-pane.well#my-matches
+        | My Matches Pane
+      .tab-pane.well#simulate
+        p(id="simulation-status-text")
+          if simulationStatus
+            | #{simulationStatus}
+          else
+            | By simulating games you can get your game ranked faster!
+        p
+          button.btn.btn-warning.btn-lg.highlight#simulate-button() Simulate Games!
+        if me.isAdmin()
+          p
+            button.btn.btn-danger.btn-lg.highlight#simulate-all-button() RESET AND SIMULATE GAMES
