Set up the my matches tab in the new ladder view.

--- a/app/templates/play/ladder.jade
+++ b/app/templates/play/ladder.jade
@@ -39,7 +39,7 @@ block content
       .tab-pane.active.well#ladder
         #ladder-tab-view
       .tab-pane.well#my-matches
-        | My Matches Pane
+        #my-matches-tab-view
       .tab-pane.well#simulate
         p(id="simulation-status-text")
           if simulationStatus
