--- a/app/templates/modal/save_version.jade
+++ b/app/templates/modal/save_version.jade
@@ -17,12 +17,14 @@ block modal-body-wait-content
   h3(data-i18n="common.saving") Saving...
 
 block modal-footer-content
-  #accept-cla-wrapper.alert.alert-info
-    span(data-i18n="versions.cla_prefix") To save changes, first you must agree to our
-    |  
-    strong#cla-link(data-i18n="versions.cla_url") CLA
-    span(data-i18n="versions.cla_suffix") .
-    button.btn#agreement-button(data-i18n="versions.cla_agree") I AGREE
+  if !noSaveButton
+    #accept-cla-wrapper.alert.alert-info
+      span(data-i18n="versions.cla_prefix") To save changes, first you must agree to our
+      |  
+      strong#cla-link(data-i18n="versions.cla_url") CLA
+      span(data-i18n="versions.cla_suffix") .
+      button.btn#agreement-button(data-i18n="versions.cla_agree") I AGREE
     
   button.btn(data-dismiss="modal", data-i18n="common.cancel") Cancel
-  button.btn.btn-primary#save-version-button(data-i18n="common.save") Save
+  if !noSaveButton
+    button.btn.btn-primary#save-version-button(data-i18n="common.save") Save
