- create sass file to center 404 image on page

--- a/app/templates/not_found.jade
+++ b/app/templates/not_found.jade
@@ -6,5 +6,5 @@ block content
 
   num = Math.floor(Math.random() * 3) + 1
 
-  img(src="/images/pages/not_found/404_#{num}.png")
+  img(src="/images/pages/not_found/404_#{num}.png" class="not-found-image")
 
