--- a/app/templates/play/ladder/ladder_tab.jade
+++ b/app/templates/play/ladder/ladder_tab.jade
@@ -20,4 +20,4 @@ div#columns.row
               if(!myRow)
                 a(href="/play/level/#{level.get('slug') || level.id}/?team=#{team.otherTeam}&opponent=#{session.id}") Battle as #{team.otherTeam}!
               else
-                a(href="/play/ladder/#{levelID}/team/#{team.id}") View your #{team.id} matches.
+                a(href="/play/ladder/#{level.get('slug') || level.id}/team/#{team.id}") View your #{team.id} matches.
