--- a/app/styles/play/ladder/play_modal.sass
+++ b/app/styles/play/ladder/play_modal.sass
@@ -21,14 +21,45 @@
     opacity: 0.4
     
     border-radius: 5px
+    .only-one
+      -webkit-transition: opacity 0.3s ease-in-out
+      -moz-transition: opacity 0.3s ease-in-out
+      -ms-transition: opacity 0.3s ease-in-out
+      -o-transition: opacity 0.3s ease-in-out
+      transition: opacity 0.3s ease-in-out
+      opacity: 0
     
   .play-option:hover
     opacity: 1
+    .only-one
+      opacity: 1
     
   .my-icon
     position: relative
     left: 0
     top: -10px
+    z-index: 1
+    
+  .my-team-icon
+    height: 60px
+    position: relative
+    top: -10px
+    left: 10px
+    z-index: 0
+    
+  .opponent-team-icon
+    height: 60px
+    position: relative
+    top: 10px
+    right: 10px
+    z-index: 0
+    float: right
+    -moz-transform: scaleX(-1)
+    -o-transform: scaleX(-1)
+    -webkit-transform: scaleX(-1)
+    transform: scaleX(-1)
+    filter: FlipH
+    -ms-filter: "FlipH"
     
   .opponent-icon
     position: relative
@@ -41,6 +72,7 @@
     transform: scaleX(-1)
     filter: FlipH
     -ms-filter: "FlipH"
+    z-index: 1
     
   .name-label
     border-bottom: 20px solid lightslategray
@@ -51,6 +83,7 @@
     color: black
     font-weight: bold
     text-align: center
+    z-index: 2
     
     span
       position: relative
