Fixed a link to point correctly

--- a/app/templates/editor/article/edit.jade
+++ b/app/templates/editor/article/edit.jade
@@ -6,7 +6,7 @@ block content
       li
         a(href="/editor", data-i18n="editor.main_title") CodeCombat Editors
       li
-        a(href="/editor/thang", data-i18n="editor.article_title") Article Editor
+        a(href="/editor/article", data-i18n="editor.article_title") Article Editor
       li.active
         | #{article.attributes.name}
 
