--- a/app/templates/play/ladder/ladder_tab.jade
+++ b/app/templates/play/ladder/ladder_tab.jade
@@ -14,7 +14,7 @@ div#columns.row
         for session in team.leaderboard.topPlayers.models
           - var myRow = session.get('creator') == me.id
           tr(class=myRow ? "success" : "")
-            td.score-cell= session.get('totalScore').toFixed(2)
+            td.score-cell= Math.round(session.get('totalScore') * 100)
             td.name-col-cell= session.get('creatorName') || "Anonymous"
             td
               a(href="/play/level/#{level.get('slug') || level.id}/?team=#{team.otherTeam}&opponent=#{session.id}")
