--- a/app/templates/play/ladder/my_matches_tab.jade
+++ b/app/templates/play/ladder/my_matches_tab.jade
@@ -43,7 +43,7 @@ div#columns.row
             td.time-cell= match.when
             td.battle-cell
               - var text = match.state === 'win' ? 'Watch your victory' : 'Defeat the ' + team.otherTeam
-              a(href="/play/level/#{levelID}?team=#{teamID}&opponent=#{match.sessionID}")= text
+              a(href="/play/level/#{levelID}?team=#{team.id}&opponent=#{match.sessionID}")= text
 
         if !team.matches.length
           tr
