Reworked the victory modal styling a bit.

--- a/app/styles/play/level/modal/victory.sass
+++ b/app/styles/play/level/modal/victory.sass
@@ -1,25 +1,35 @@
 #level-victory-modal
+  .victory-banner
+    float: right
+    width: 150px
+    position: relative
+    
+  .modal-footer
+    clear: both
+    padding-top: 15px
+  
   p.sign-up-poke
     text-align: left
     margin-bottom: 10px
-
-  .sign-up-button
-    margin-left: 20px
-
-  .next-level-button
-    margin-bottom: 10px
-    margin-right: 30px
-    float: right
     
+  .sign-up-button
+    float: right
+    margin-left: 10px
+    
+  .next-level-button
+    float: right
+    margin-left: 10px
+
   .rating
-    float: center
-    margin-right: 22%
+    float: left
+    position: relative
+    top: 5px
     span
       margin-right: 5px
     i
       cursor: pointer
       padding: 2px
-      
+
   .review
     margin-top: 5px
     width: 100%
@@ -31,23 +41,10 @@
       width: 100%
       height: 80px
       box-sizing: border-box
-    
+
   .share-buttons
+    padding-top: 15px
     clear: both
 
   .modal-header
-    text-align: left
-
-  .victory-banner
-    width: 450px
-    position: absolute
-    left: -150px
-
-  .modal-dialog
-    margin-left: 30%
-    padding-left: 300px
-    width: 700px
-
-  .modal-footer
-    margin: 0px
-    padding: 0px
+    text-align: center
