--- a/app/templates/play/level/hud_prop.jade
+++ b/app/templates/play/level/hud_prop.jade
@@ -1,6 +1,6 @@
 .prop(name="#{prop}")
   if hasIcon
-    img.prop-label(src="/images/level/prop_#{prop}.png", alt="#{prop}")
+    span(class="prop-label prop-label-icon prop-label-icon-#{prop}")
   else
     span.prop-label #{prop}: 
     
