Moved "Skip (esc)" next to Continue button

--- a/app/styles/play/level/hud.sass
+++ b/app/styles/play/level/hud.sass
@@ -230,10 +230,7 @@
 
         .hud-hint
           font-weight: normal
-          color: #aaa
-          position: absolute
-          top: 0
-          right: 4px
+          color: #999
 
         .enter
           position: absolute
