Fixed Spell Debug View width bug

--- a/app/styles/play/level/tome/spell_debug.sass
+++ b/app/styles/play/level/tome/spell_debug.sass
@@ -3,6 +3,7 @@
 .spell-debug-view
   position: absolute
   z-index: 9001
+  min-width: 250px
   max-width: 400px
   padding: 10px
   background: transparent url(/images/level/popover_background.png)
