Set up the ladder play modal to point to the tutorial level dynamically.

--- a/app/templates/play/ladder/play_modal.jade
+++ b/app/templates/play/ladder/play_modal.jade
@@ -8,7 +8,7 @@ block modal-body-content
   p.tutorial-suggestion
     span Not sure what's going on?
     |  
-    a(href="/play/level/brawlwood-tutorial") Play the tutorial first.
+    a(href="/play/level/#{levelID}-tutorial") Play the tutorial first.
 
   a(href="/play/level/#{levelID}?team=#{teamID}")
     div.play-option
