--- a/app/templates/contribute/scribe.jade
+++ b/app/templates/contribute/scribe.jade
@@ -16,7 +16,7 @@ block content
         span  
         span(data-i18n="classes.scribe_title_description") (Article Editor)
       p
-        span(data-i18n="account_settings.scribe_introduction_pref")
+        span(data-i18n="contribute.scribe_introduction_pref")
           | CodeCombat isn't just going to be a bunch of levels.
           | It will also include a resource for knowledge, a wiki of programming concepts that levels can hook into.
           | That way rather than each Artisan having to describe in detail what a comparison operator is, they
@@ -24,7 +24,7 @@ block content
           | Something along the lines of what the 
         a(href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide", data-i18n="contribute.scribe_introduction_url_mozilla")
           | Mozilla Developer Network 
-        span(data-i18n="account_settings.scribe_introduction_suf")  
+        span(data-i18n="contribute.scribe_introduction_suf")  
           | has built. If your idea of fun is articulating the concepts of programming in Markdown form,
           | then this class might be for you.
   
