Set up the ladder play modal to be more forthright getting new players to play the tutorial.

--- a/app/styles/play/ladder/play_modal.sass
+++ b/app/styles/play/ladder/play_modal.sass
@@ -1,7 +1,14 @@
 #ladder-play-modal
+  #noob-view p
+    font-size: 30px
+  
+  #skip-tutorial-button
+    font-size: 16px
+  
   .tutorial-suggestion
     text-align: center
     font-size: 18px
+    margin: 10px 0 30px
   
   .play-option
     margin-bottom: 15px
