Fixed a multiplayer link and debug mark alpha.

--- a/app/templates/play/level/modal/multiplayer.jade
+++ b/app/templates/play/level/modal/multiplayer.jade
@@ -30,7 +30,7 @@
       if me.get('anonymous')
         p Sign in or create an account and get your solution on the leaderboard!
       else
-        a#go-to-leaderboard-button.btn.btn-primary(href="/play/ladder/#{levelSlug}/team/#{team}") Go to the leaderboard!
+        a#go-to-leaderboard-button.btn.btn-primary(href="/play/ladder/#{levelSlug}#my-matches") Go to the leaderboard!
         p You can submit your game to be ranked from the leaderboard page.
   
   .modal-footer
