--- a/app/templates/modal/revert.jade
+++ b/app/templates/modal/revert.jade
@@ -1,7 +1,7 @@
 extends /templates/modal/modal_base
 
 block modal-header-content
-  h3(data-i18n="revert.revert_models") Revert Models
+  h3(data-i18n="editor.revert_models") Revert Models
 
 block modal-body-content
   table.table.table-striped#changed-models
