--- a/app/templates/modal/login.jade
+++ b/app/templates/modal/login.jade
@@ -9,7 +9,7 @@ block modal-body-content
       label.control-label(for="login-email", data-i18n="general.email") Email      
       input#login-email.input-large.form-control(name="email", type="email")
     .form-group
-      label.control-label(for="login-password", data-i18n="forms.password") Password      
+      label.control-label(for="login-password", data-i18n="general.password") Password      
       input#login-password.input-large.form-control(name="password", type="password")
 
 block modal-body-wait-content
