--- a/app/templates/modal/signup.jade
+++ b/app/templates/modal/signup.jade
@@ -12,7 +12,7 @@ block modal-body-content
           label.control-label(for="signup-email", data-i18n="general.email") Email              
           input#signup-email.form-control.input-large(name="email", type="email")
         .form-group
-          label.control-label(for="signup-password", data-i18n="forms.password") Password              
+          label.control-label(for="signup-password", data-i18n="general.password") Password              
           input#signup-password.input-large.form-control(name="password", type="password")
         hr
         .form-group.checkbox
