Added missing Dutch diplomats

--- a/app/templates/contribute/diplomat.jade
+++ b/app/templates/contribute/diplomat.jade
@@ -73,7 +73,7 @@ block content
           li German - Dirk, faabsen, HiroP0, Anon
           li Thai - Kamolchanok Jittrepit
           li Vietnamese - An Nguyen Hoang Thien
-          li Dutch - Glen De Cauwsemaecker
+          li Dutch - Glen De Cauwsemaecker, Guido Zuidhof, Ruben Vereecken
           li Greek - Stergios
           li Latin American Spanish - Jesús Ruppel, Matthew Burt, Mariano Luzza
           li Spain Spanish - Matthew Burt, DanielRodriguezRivero, Anon
