Created a modal version of Version History

--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -38,9 +38,11 @@ block outer_content
 
             li.dropdown
               a.dropdown-toggle(href='#', data-toggle='dropdown')
-                | Help
+                | More
                 b.caret
               ul.dropdown-menu
+                li#version-history-button
+                  a(href='#') Version History
                 li
                   a(href='https://github.com/codecombat/codecombat/wiki/Artisan-Home') Wiki
                 li
