--- a/app/templates/kinds/versions.jade
+++ b/app/templates/kinds/versions.jade
@@ -1,19 +1,24 @@
 extends /templates/base
 
+mixin version-history-title()
+  h3(data-i18n="general.version_history_for") Version History for: #{dataList[0]}
+
+mixin version-history-body()
+  table.table
+    tr
+      th(data-i18n="general.name") Name
+      th(data-i18n="general.version") Version
+      th(data-i18n="general.commit_msg") Commit Message
+    for data in dataList
+      tr
+        td
+          a(href="/editor/#{page}/#{data.slug || data._id}")
+            | #{data.name}
+        td #{data.version.major}.#{data.version.minor}
+        td #{data.commitMessage}
+
 block content
   if dataList
-    h3(data-i18n="general.version_history_for") Version History for: "#{dataList[0].name}"
+    +version-history-title()
   
-    table.table
-      tr
-        th(data-i18n="general.name") Name
-        th(data-i18n="general.version") Version
-        th(data-i18n="general.commit_msg") Commit Message
-    
-      for data in dataList
-        tr
-          td
-            a(href="/editor/#{page}/#{data.slug || data._id}")
-              | #{data.name}
-          td #{data.version.major}.#{data.version.minor}
-          td #{data.commitMessage}
+    +version-history-body()
