--- a/app/styles/play/level/hud.sass
+++ b/app/styles/play/level/hud.sass
@@ -208,11 +208,11 @@
               height: 19px
 
               div
-                @include box-sizing(border-box)
+                border-radius: 1px
                 background-color: #6BA1C8
                 height: 100%
-                border-bottom: 2px groove #201B15
-                border-right: 1px solid #201B15
+                border-bottom: 2px groove darken(#6BA1C8, 30%)
+                border-right: 1px solid darken(#6BA1C8, 10%)
                 position: absolute
                 top: 0
 
