--- a/app/templates/editor/level/versions.jade
+++ b/app/templates/editor/level/versions.jade
@@ -2,7 +2,7 @@ extends /templates/modal/modal_base
 include /templates/kinds/versions
 
 block modal-header-content
-  h3 Version History
+  h3(data-i18n="general.version_history") Version History
 
 block modal-body-content
   if dataList
