--- a/app/templates/play/ladder/my_matches_tab.jade
+++ b/app/templates/play/ladder/my_matches_tab.jade
@@ -22,6 +22,10 @@ div#columns.row
                 span.failed.hidden Failed to Rank
 
         tr
+          th(colspan=4, style="color: #{team.primaryColor}")
+            img(src="https://chart.googleapis.com/chart?chs=450x125&cht=lxy&chco=#{team.chartColor}&chtt=Score+History&chts=#{team.chartColor},16,c&chf=a,s,000000FF&chls=2&chm=o,#{team.chartColor},0,4&chd=t:#{team.chartData}")
+
+        tr
           th Result
           th Opponent
           th When
