Finished Article History

--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -42,7 +42,7 @@ block outer_content
                 b.caret
               ul.dropdown-menu
                 li#version-history-button
-                  a(href='#') Version History
+                  a(href='#', data-i18n="general.version_history") Version History
                 li
                   a(href='https://github.com/codecombat/codecombat/wiki/Artisan-Home') Wiki
                 li
