--- a/app/templates/play/spectate.jade
+++ b/app/templates/play/spectate.jade
@@ -1,16 +1,22 @@
 .level-content
   #control-bar-view
-
   #canvas-wrapper
-    canvas(width=924, height=589)#surface
+    canvas(width=1848, height=1178)#surface
     #canvas-left-gradient.gradient
     #canvas-top-gradient.gradient
-  #goals-view.hide
-  #gold-view.hide.expanded
+  #gold-view.secret.expanded
   #level-chat-view
   #playback-view
   #thang-hud
 .footer
   .content
     p(class='footer-link-text')
-      a(title='Contact', tabindex=-1, data-toggle="coco-modal", data-target="modal/contact", data-i18n="nav.contact") Contact
+      a(title='Send CodeCombat a message', tabindex=-1, data-toggle="coco-modal", data-target="modal/contact", data-i18n="nav.contact") Contact
+    if explainHourOfCode
+      // Does not show up unless lang is en-US.
+      div.hour-of-code-explanation
+        | The 'Hour of Code' is a nationwide initiative by 
+        a(href="http://csedweek.org") Computer Science Education Week
+        | and 
+        a(href="http://code.org") Code.org
+        | to introduce millions of students to one hour of computer science and computer programming.
