Added Version History to Thang Types

--- a/app/templates/editor/level/edit.jade
+++ b/app/templates/editor/level/edit.jade
@@ -41,7 +41,7 @@ block outer_content
                 | More
                 b.caret
               ul.dropdown-menu
-                li#version-history-button
+                li#history-button
                   a(href='#', data-i18n="general.version_history") Version History
                 li
                   a(href='https://github.com/codecombat/codecombat/wiki/Artisan-Home') Wiki
