--- a/app/templates/editor/level/component/edit.jade
+++ b/app/templates/editor/level/component/edit.jade
@@ -14,6 +14,8 @@ nav.navbar.navbar-default(role='navigation')
           a(href="#component-config-schema" data-toggle="tab") Config Schema
         li
           a(href="#component-settings" data-toggle="tab") Settings
+      ul.nav.navbar-nav.navbar-left
+        li(data-i18n="general.history").btn.btn-primary.navbar-btn#history-button History
       ul.nav.navbar-nav.navbar-right
         li(data-i18n="editor.level_component_btn_new").btn.btn-primary.navbar-btn#create-new-component-button Create New Component
 
