Added i18n for components

--- a/app/templates/editor/level/component/edit.jade
+++ b/app/templates/editor/level/component/edit.jade
@@ -9,11 +9,11 @@ nav.navbar.navbar-default(role='navigation')
     .collapse.navbar-collapse
       ul.nav.navbar-nav.nav-tabs
         li.active
-          a(href="#component-code" data-toggle="tab") Code
+          a(href="#component-code" data-toggle="tab" data-i18n="general.code") Code
         li
-          a(href="#component-config-schema" data-toggle="tab") Config Schema
+          a(href="#component-config-schema" data-toggle="tab" data-i18n="editor.level_component_config_schema") Config Schema
         li
-          a(href="#component-settings" data-toggle="tab") Settings
+          a(href="#component-settings" data-toggle="tab" data-i18n="editor.level_component_settings") Settings
       ul.nav.navbar-nav.navbar-left
         li(data-i18n="general.history").btn.btn-primary.navbar-btn#history-button History
       ul.nav.navbar-nav.navbar-right
