--- a/app/templates/play/ladder.jade
+++ b/app/templates/play/ladder.jade
@@ -10,7 +10,7 @@ block content
   if me.get('anonymous')
     div#must-log-in
       p
-        strong Please log in first before playing a ladder game.
+        strong(data-i18n="ladder.please_login") Please log in first before playing a ladder game.
       button.btn.btn-primary(data-toggle="coco-modal", data-target="modal/login", data-i18n="login.log_in") Log In
       button.btn.btn-primary(data-toggle="coco-modal", data-target="modal/signup", data-i18n="login.sign_up") Create Account
 
@@ -21,7 +21,7 @@ block content
       for team in teams
         div.column.col-md-4
           a(style="background-color: #{team.primaryColor}", data-team=team.id).play-button.btn.btn-danger.btn-block.btn-lg
-            span Play As 
+            span(data-i18n="play.play_as") Play As
             span= team.name
       div.column.col-md-2
     
@@ -29,11 +29,11 @@ block content
       
     ul.nav.nav-pills
       li.active
-        a(href="#ladder", data-toggle="tab") Ladder
+        a(href="#ladder", data-toggle="tab", data-i18n="general.ladder") Ladder
       li
-        a(href="#my-matches", data-toggle="tab") My Matches
+        a(href="#my-matches", data-toggle="tab", data-i18n="ladder.my_matches") My Matches
       li
-        a(href="#simulate", data-toggle="tab") Simulate
+        a(href="#simulate", data-toggle="tab", data-i18n="ladder.simulate") Simulate
 
     div.tab-content
       .tab-pane.active.well#ladder
@@ -45,9 +45,9 @@ block content
           if simulationStatus
             | #{simulationStatus}
           else
-            | By simulating games you can get your game ranked faster!
+            span(data-i18n="ladder.simulation_explanation") By simulating games you can get your game ranked faster!
         p
-          button.btn.btn-warning.btn-lg.highlight#simulate-button() Simulate Games!
+          button(data-i18n="ladder.simulate_games").btn.btn-warning.btn-lg.highlight#simulate-button Simulate Games!
         if me.isAdmin()
           p
-            button.btn.btn-danger.btn-lg.highlight#simulate-all-button() RESET AND SIMULATE GAMES
+            button(data-i18n="ladder.simulate_all").btn.btn-danger.btn-lg.highlight#simulate-all-button RESET AND SIMULATE GAMES
