--- a/app/templates/play/ladder/ladder_tab.jade
+++ b/app/templates/play/ladder/ladder_tab.jade
@@ -7,8 +7,8 @@ div#columns.row
             span= team.name
             span(data-i18n="ladder.leaderboard") Leaderboard
         tr
-          th(data-i18n="ladder.rank") Rank
-          th(data-i18n="ladder.score") Score
+          th(data-i18n="general.rank") Rank
+          th(data-i18n="general.score") Score
           th(data-i18n="general.name").name-col-cell Name
           th
 
