--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -179,3 +179,6 @@ table.table
   border: 1px solid black
 .ui-slider-handle
   border: 1px solid black !important
+
+.flag-cursor
+  cursor: crosshair
