Okay, protectAPI should really work for Dungeon Arena now with the latest Aether change. Added a couple i18n spaces.

--- a/app/templates/play/ladder/ladder_tab.jade
+++ b/app/templates/play/ladder/ladder_tab.jade
@@ -5,6 +5,7 @@ div#columns.row
         tr
           th(colspan=4, style="color: #{team.primaryColor}")
             span= team.name
+            span  
             span(data-i18n="ladder.leaderboard") Leaderboard
         tr
           th(data-i18n="general.rank") Rank
