--- a/app/templates/editor/level/thangs_tab.jade
+++ b/app/templates/editor/level/thangs_tab.jade
@@ -2,15 +2,15 @@
   h3(data-i18n="editor.level_tab_thangs_title") Current Thangs
   .btn-group(data-toggle="buttons-radio")#extant-thangs-filter
     button.btn.btn-primary All
-    button.btn.btn-primary(value="Unit")
+    button.btn.btn-primary(value="Unit", title="Unit")
       i.icon-user
-    button.btn.btn-primary(value="Wall")
+    button.btn.btn-primary(value="Wall", title="Wall")
       i.icon-home
-    button.btn.btn-primary(value="Floor")
+    button.btn.btn-primary(value="Floor", title="Floor")
       i.icon-globe
-    button.btn.btn-primary(value="Doodad")
+    button.btn.btn-primary(value="Doodad", title="Doodad")
       i.icon-leaf
-    button.btn.btn-primary(value="Misc")
+    button.btn.btn-primary(value="Misc", title="Misc")
       i.icon-question-sign
   #thangs-treema(title="Double click to configure a thang")
 
