Sass changes for footer and search in editor

--- a/app/styles/kinds/search.sass
+++ b/app/styles/kinds/search.sass
@@ -3,6 +3,11 @@
   a.open-modal-button
     float: right
 
+  input#search
+    width: 190px
+    height: 30px
+    padding-left: 5px
+
   table.table
     background-color: white
     .body-row
