--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -45,7 +45,8 @@ h1 h2 h3 h4
   background-color: #2f261d
   p
     margin: 0
-    padding-top: 25px
+    padding-top: 10px
+    padding-bottom: 10px
     text-align: center
 
   .mixpanel-badge, .firebase-badge
@@ -67,7 +68,7 @@ a[data-toggle="modal"]
   cursor: pointer
 
 .share-buttons, .partner-badges
-  margin-top: 10px
+  padding-bottom: 10px
   text-align: center
   @include opacity(0.75)
 
