--- a/app/templates/contribute/diplomat.jade
+++ b/app/templates/contribute/diplomat.jade
@@ -70,7 +70,7 @@ block content
           li Turkish - Nazım Gediz Aydındoğmuş, cobaimelan, wakeup
           li Brazilian Portuguese - Gutenberg Barros, Kieizroe, Matthew Burt, brunoporto
           li Portugal Portuguese - Matthew Burt, ReiDuKuduro
-          li German - Dirk, faabsen, HiroP0, Anon
+          li German - Dirk, faabsen, HiroP0, Anon, bkimminich
           li Thai - Kamolchanok Jittrepit
           li Vietnamese - An Nguyen Hoang Thien
           li Dutch - Glen De Cauwsemaecker, Guido Zuidhof, Ruben Vereecken
