--- a/app/templates/contribute/diplomat.jade
+++ b/app/templates/contribute/diplomat.jade
@@ -81,7 +81,7 @@ block content
           li Hungarian - ferpeter, csuvsaregal, atlantisguru, Anon
           li Japanese - g1itch, kengos
           li Chinese - Adam23, spacepope
-          li Polish - Anon
+          li Polish - Anon, Kacper Ciepielewski
           li Danish - Einar Rasmussen, sorsjen, Anon
           li Slovak - Anon
           li Persian - Reza Habibi (Rehb)
