Fixed several bugs with Thang selection and the SpellView and HUD.

--- a/app/styles/play/level/hud.sass
+++ b/app/styles/play/level/hud.sass
@@ -95,6 +95,9 @@
         height: 100px
         @include user-select(text)
   
+        &.nonexistent
+          visibility: hidden
+
         .text-prop
           width: 50%
 
