--- a/app/templates/play/level/playback.jade
+++ b/app/templates/play/level/playback.jade
@@ -37,3 +37,6 @@ button.btn.btn-xs.btn-inverse#music-button(title="Toggle Music")
     li.selectable#edit-wizard-settings
       i.icon-user
       span(data-i18n="play_level.customize_wizard") Customize Wizard
+    li.selectable#edit-editor-config
+      i.icon-edit
+      span Editor Config
