Moved Glen from Archmages to About.

--- a/app/templates/about.jade
+++ b/app/templates/about.jade
@@ -151,4 +151,15 @@ block content
               | and community organizer; you've probably 
               | already spoken with Jeremy.
 
+        li.row
+    
+          img(src="/images/pages/about/glen_small.png").img-thumbnail
+  
+          .col-sm-8
+
+            h3 Glen De Cauwsemaecker
+    
+            p(data-i18n="about.glen_description")
+              | Glen, describe thyself!
+
 
