--- a/app/templates/play/level/modal/editor_config.jade
+++ b/app/templates/play/level/modal/editor_config.jade
@@ -2,27 +2,27 @@
 .modal-dialog
   .modal-header
     button(type='button', data-dismiss="modal", aria-hidden="true").close &times;
-    h3 Editor Settings
+    h3(data-i18n="play_level.editor_config_title") Editor Configuration
   
   .modal-body
     .form
-      .form-group
-        label(for="keyBindings") 
+      .form-group.select-group
+        label.control-label(for="keyBindings" data-i18n="play_level.editor_config_keybindings_label") Key Bindings
         select#keyBindings(name="keyBindings", type="checkbox", checked=multiplayer)
-          option(value="default" selected=(keyBindings === "default")) Default (Ace)
+          option(value="default" selected=(keyBindings === "default") data-i18n="play_level.editor_config_keybindings_default") Default (Ace)
           option(value="vim" selected=(keyBindings === "vim")) Vim
           option(value="emacs" selected=(keyBindings === "emacs")) Emacs
-        span.help-block Adds additional shortcuts known from the common editors.
+        span.help-block(data-i18n="play_level.editor_config_keybindings_description") Adds additional shortcuts known from the common editors.
       .form-group.checkbox
         label(for="invisibles")
           input#invisibles(name="invisibles", type="checkbox", checked=invisibles)
-          | Show Invisibles
-        span.help-block Displays invisibles such as spaces or tabs.
+          span(data-i18n="play_level.editor_config_invisibles_label") Show Invisibles
+        span.help-block(data-i18n="play_level.editor_config_invisibles_description") Displays invisibles such as spaces or tabs.
       .form-group.checkbox
         label(for="indentGuides")
           input#indentGuides(name="indentGuides", type="checkbox", checked=indentGuides)
-          | Show Indent Guides
-        span.help-block Displays vertical lines to see indentation better.
+          span(data-i18n="play_level.editor_config_indentguides_label") Show Indent Guides
+        span.help-block(data-i18n="play_level.editor_config_indentguides_description") Displays vertical lines to see indentation better.
       
   .modal-footer
     a(href='#', data-dismiss="modal", aria-hidden="true", data-i18n="modal.close").btn.btn-primary Close
