--- a/app/templates/play/level/playback.jade
+++ b/app/templates/play/level/playback.jade
@@ -39,4 +39,4 @@ button.btn.btn-xs.btn-inverse#music-button(title="Toggle Music")
       span(data-i18n="play_level.customize_wizard") Customize Wizard
     li.selectable#edit-editor-config
       i.icon-edit
-      span Editor Config
+      span(data-i18n="play_level.editor_config") Editor Config
