--- a/app/templates/account/settings.jade
+++ b/app/templates/account/settings.jade
@@ -2,7 +2,7 @@ extends /templates/base
 
 block content
   
-  h2(data-i18n="account_settings.title") Account Settings
+  h2(data-i18n="account_settings.title") Account Settings (app/views/profile_view.coffee, settings.jade)
   
   if me.get('anonymous')
     p(data-i18n="account_settings.not_logged_in") Log in or create an account to change your settings.
