Working on new loading view design.

--- a/app/styles/base.sass
+++ b/app/styles/base.sass
@@ -4,6 +4,10 @@
 html
   background-color: #2f261d
 
+html, body
+  // For level loading view wings
+  overflow-x: hidden
+
 // https://github.com/twbs/bootstrap/issues/9237 -- need a version that's not !important
 .secret
   display: none
