--- a/app/templates/play/spectate.jade
+++ b/app/templates/play/spectate.jade
@@ -1,7 +1,9 @@
+#level-loading-view
+
 .level-content
   #control-bar-view
   #canvas-wrapper
-    canvas(width=1848, height=1178)#surface
+    canvas(width=1920, height=1224)#surface
     #canvas-left-gradient.gradient
     #canvas-top-gradient.gradient
   #gold-view.secret.expanded
