--- a/app/styles/play/level/loading.sass
+++ b/app/styles/play/level/loading.sass
@@ -2,10 +2,10 @@
 @import "app/styles/mixins"
 
 @mixin sky-background($url: '', $backgroundPosition: left)
-  $top: #6cab26
-  $mid: #999999
-  $bot: #33AA00
-  $stop: 44%
+  $top: #95D9EF
+  $mid: #FFFFFF
+  $bot: #8EC643
+  $stop: 99.6%
   background: $mid
   background-image: url($url)  // fallback
   background-image: url($url), -webkit-linear-gradient(top, $top, $mid $stop, $bot)
@@ -50,16 +50,16 @@
         transition-duration: 1.2s
 
   .left-wing, .right-wing
-    width: 50%
+    width: 100%
     height: 100%
     position: absolute
 
   .left-wing
     @include sky-background('/images/level/loading_left_wing.png', right)
-    left: 0
-    transition: left $UNVEIL_TIME ease
+    left: -50%
+    transition: all $UNVEIL_TIME ease
 
   .right-wing
     @include sky-background('/images/level/loading_right_wing.png', left)
-    right: 0
-    transition: right $UNVEIL_TIME ease
+    right: -50%
+    transition: all $UNVEIL_TIME ease
