--- a/app/styles/play/spectate.sass
+++ b/app/styles/play/spectate.sass
@@ -1,7 +1,6 @@
 @import "app/styles/bootstrap/mixins"
 @import "app/styles/mixins"
 
-
 #spectate-level-view
   #playback-view
     width: 100%
@@ -24,13 +23,15 @@
       line-height: 15px
       left: 0
 
-
+  max-width: 1920px
   margin: 0 auto
   @include user-select(none)
+  
+  #level-loading-view
+    max-height: 1284px
 
   .level-content
     position: relative
-    max-width: 1920px
     margin: 0px auto
 
   #canvas-wrapper
